# approximative-clustering

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-lib.yaml
approximative_clustering/: __init__.py
tests/: test_clustering.py
