[tool.poetry]
name = "approximative-clustering"
version = "0.1.0"
description = ""
authors = ["Jan Stiborek <honza.stiborek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.2"
networkx = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.54.3"
scipy = "^1.9.0"
scikit-learn = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
